FEAT: Added game
Added a game in WebGL format to my website :)

--- a/personas/MaxAl100.html
+++ b/personas/MaxAl100.html
@@ -36,5 +36,12 @@
   	<p>Hola, soy <a href="https://github.com/MaxAl100">@MaxAl100</a> y este es el archivo HTML que le hurté al profe >:3</p>
 
 	<p> Además, aquí <a href="https://steamcommunity.com/id/A-cool-guy/">A-cool-guy</a> está mi perfil de steam.</p>
+
+	<p>Y aquí está uno de mis juegos:</p>
+	<iframe src="MaxAl100Extras/index.html" width="800" height="600"></iframe>
+
+
+	<p>Puedes ver más aquí!: <a href="https://chili-gamez.itch.io/">Chili Gamez</a></p>
+
   </body>
 </html>
