--- a/personas/trycoz.html
+++ b/personas/trycoz.html
@@ -2,6 +2,7 @@
 
 <head>
     <title>Hello, world.</title>
+    <!-- HTML y CSS obtenidos de esta pagina https://blog.hubspot.com/website/css-animation-examples -->
 
     <style>
         body {
