--- a/personas/MystEdu.html
+++ b/personas/MystEdu.html
@@ -1,6 +1,6 @@
 <html>
   <head>
-    <title>Hello, world.</title>
+    <title>MystEdu PR</title>
 
     <style>
 	body {
@@ -8,13 +8,32 @@
 		font-family: sans-serif;
 		font-size: large;
 		font-weight: bold;
-		text-align: center;
+		display: flex;
+		flex-direction: column;
+		align-items: center;
 		line-height: 1.65em;
 		padding: 10% 15px;
 		margin: 0;
-		background: linear-gradient(-90deg, #ee7752, #e73c7e, #23a6d5, #23d5ab);
+		background: linear-gradient(-90deg, #f8c058, #b8f556, #23a6d5, #23d5ab);
 		background-size: 400% 400%;
 		animation: gradient 15s ease infinite;
+	}
+
+	.icon {
+		width: 256px;
+		height: 256px;
+	}
+	.icon:hover {
+		transform: scale(1.1);
+	}
+
+	.icon-link {
+		width: 100%;
+		height: 100%;
+	}
+	.icon-link img {
+		width: 100%;
+		height: 100%;
 	}
 
 	@keyframes gradient {
@@ -32,7 +51,11 @@
   </head>
 
   <body>
-  	<h1>👋</h1>
-  	<p>Hola, soy <a href="https://github.com/aaossa">@aaossa</a> y este es mi archivo HTML</p>
+	<div class="icon">
+		<a class="icon-link" href="https://github.com/MystEdu">
+			<img src="https://i.ebayimg.com/images/g/CWwAAOSwy6th0ySu/s-l1200.png" />
+		</a>
+	</div>
+  	<p>Hola, soy <a href="https://github.com/MystEdu">@MystEdu</a> y este es mi archivo HTML</p>
   </body>
 </html>
